@@ -21,7 +21,7 @@ import io.airlift.json.ObjectMapperProvider;
 import io.trino.spi.connector.SchemaTableName;
 import io.trino.spi.predicate.TupleDomain;
 import io.trino.spi.type.Type;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.List;
@@ -31,26 +31,29 @@ import java.util.Optional;
 import static io.trino.testing.QueryAssertions.assertEqualsIgnoreOrder;
 import static io.trino.type.InternalTypeManager.TESTING_TYPE_MANAGER;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class TestJsonCassandraHandles
 {
     private static final Map<String, Object> TABLE_HANDLE_AS_MAP = ImmutableMap.of(
-            "schemaName", "cassandra_schema",
-            "tableName", "cassandra_table",
-            "clusteringKeyPredicates", "");
+            "relationHandle", ImmutableMap.of(
+                    "@type", "named",
+                    "schemaName", "cassandra_schema",
+                    "tableName", "cassandra_table",
+                    "clusteringKeyPredicates", ""));
 
     private static final Map<String, Object> TABLE2_HANDLE_AS_MAP = ImmutableMap.of(
-            "schemaName", "cassandra_schema",
-            "tableName", "cassandra_table",
-            "partitions", List.of(
-                    ImmutableMap.of(
-                            "key", "a2V5",
-                            "partitionId", "partitionKey1 = 11 AND partitionKey2 = 22",
-                            "tupleDomain", ImmutableMap.of("columnDomains", Collections.emptyList()),
-                            "indexedColumnPredicatePushdown", true)),
-            "clusteringKeyPredicates", "clusteringKey1 = 33");
+            "relationHandle", ImmutableMap.of(
+                    "@type", "named",
+                    "schemaName", "cassandra_schema",
+                    "tableName", "cassandra_table",
+                    "partitions", List.of(
+                            ImmutableMap.of(
+                                    "key", "a2V5",
+                                    "partitionId", "partitionKey1 = 11 AND partitionKey2 = 22",
+                                    "tupleDomain", ImmutableMap.of("columnDomains", Collections.emptyList()),
+                                    "indexedColumnPredicatePushdown", true)),
+                    "clusteringKeyPredicates", "clusteringKey1 = 33"));
 
     private static final Map<String, Object> COLUMN_HANDLE_AS_MAP = ImmutableMap.<String, Object>builder()
             .put("name", "column")
@@ -97,9 +100,7 @@ public class TestJsonCassandraHandles
     public void testTableHandleSerialize()
             throws Exception
     {
-        CassandraTableHandle tableHandle = new CassandraTableHandle("cassandra_schema", "cassandra_table");
-
-        assertTrue(OBJECT_MAPPER.canSerialize(CassandraTableHandle.class));
+        CassandraTableHandle tableHandle = new CassandraTableHandle(new CassandraNamedRelationHandle("cassandra_schema", "cassandra_table"));
         String json = OBJECT_MAPPER.writeValueAsString(tableHandle);
         testJsonEquals(json, TABLE_HANDLE_AS_MAP);
     }
@@ -108,8 +109,7 @@ public class TestJsonCassandraHandles
     public void testTable2HandleSerialize()
             throws Exception
     {
-        CassandraTableHandle tableHandle = new CassandraTableHandle("cassandra_schema", "cassandra_table", PARTITIONS, "clusteringKey1 = 33");
-        assertTrue(OBJECT_MAPPER.canSerialize(CassandraTableHandle.class));
+        CassandraTableHandle tableHandle = new CassandraTableHandle(new CassandraNamedRelationHandle("cassandra_schema", "cassandra_table", PARTITIONS, "clusteringKey1 = 33"));
         String json = OBJECT_MAPPER.writeValueAsString(tableHandle);
         testJsonEquals(json, TABLE2_HANDLE_AS_MAP);
     }
@@ -120,12 +120,12 @@ public class TestJsonCassandraHandles
     {
         String json = OBJECT_MAPPER.writeValueAsString(TABLE_HANDLE_AS_MAP);
 
-        CassandraTableHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class);
+        CassandraNamedRelationHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class).getRequiredNamedRelation();
 
-        assertEquals(tableHandle.getSchemaName(), "cassandra_schema");
-        assertEquals(tableHandle.getTableName(), "cassandra_table");
-        assertEquals(tableHandle.getSchemaTableName(), new SchemaTableName("cassandra_schema", "cassandra_table"));
-        assertEquals(tableHandle.getClusteringKeyPredicates(), "");
+        assertThat(tableHandle.getSchemaName()).isEqualTo("cassandra_schema");
+        assertThat(tableHandle.getTableName()).isEqualTo("cassandra_table");
+        assertThat(tableHandle.getSchemaTableName()).isEqualTo(new SchemaTableName("cassandra_schema", "cassandra_table"));
+        assertThat(tableHandle.getClusteringKeyPredicates()).isEqualTo("");
     }
 
     @Test
@@ -134,13 +134,13 @@ public class TestJsonCassandraHandles
     {
         String json = OBJECT_MAPPER.writeValueAsString(TABLE2_HANDLE_AS_MAP);
 
-        CassandraTableHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class);
+        CassandraNamedRelationHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class).getRequiredNamedRelation();
 
-        assertEquals(tableHandle.getSchemaName(), "cassandra_schema");
-        assertEquals(tableHandle.getTableName(), "cassandra_table");
-        assertEquals(tableHandle.getSchemaTableName(), new SchemaTableName("cassandra_schema", "cassandra_table"));
-        assertEquals(tableHandle.getPartitions(), PARTITIONS);
-        assertEquals(tableHandle.getClusteringKeyPredicates(), "clusteringKey1 = 33");
+        assertThat(tableHandle.getSchemaName()).isEqualTo("cassandra_schema");
+        assertThat(tableHandle.getTableName()).isEqualTo("cassandra_table");
+        assertThat(tableHandle.getSchemaTableName()).isEqualTo(new SchemaTableName("cassandra_schema", "cassandra_table"));
+        assertThat(tableHandle.getPartitions()).isEqualTo(PARTITIONS);
+        assertThat(tableHandle.getClusteringKeyPredicates()).isEqualTo("clusteringKey1 = 33");
     }
 
     @Test
@@ -148,8 +148,6 @@ public class TestJsonCassandraHandles
             throws Exception
     {
         CassandraColumnHandle columnHandle = new CassandraColumnHandle("column", 42, CassandraTypes.BIGINT, false, true, false, false);
-
-        assertTrue(OBJECT_MAPPER.canSerialize(CassandraColumnHandle.class));
         String json = OBJECT_MAPPER.writeValueAsString(columnHandle);
         testJsonEquals(json, COLUMN_HANDLE_AS_MAP);
     }
@@ -166,8 +164,6 @@ public class TestJsonCassandraHandles
                 false,
                 false,
                 false);
-
-        assertTrue(OBJECT_MAPPER.canSerialize(CassandraColumnHandle.class));
         String json = OBJECT_MAPPER.writeValueAsString(columnHandle);
         testJsonEquals(json, COLUMN2_HANDLE_AS_MAP);
     }
@@ -180,11 +176,11 @@ public class TestJsonCassandraHandles
 
         CassandraColumnHandle columnHandle = OBJECT_MAPPER.readValue(json, CassandraColumnHandle.class);
 
-        assertEquals(columnHandle.getName(), "column");
-        assertEquals(columnHandle.getOrdinalPosition(), 42);
-        assertEquals(columnHandle.getCassandraType(), CassandraTypes.BIGINT);
-        assertEquals(columnHandle.isPartitionKey(), false);
-        assertEquals(columnHandle.isClusteringKey(), true);
+        assertThat(columnHandle.name()).isEqualTo("column");
+        assertThat(columnHandle.ordinalPosition()).isEqualTo(42);
+        assertThat(columnHandle.cassandraType()).isEqualTo(CassandraTypes.BIGINT);
+        assertThat(columnHandle.partitionKey()).isEqualTo(false);
+        assertThat(columnHandle.clusteringKey()).isEqualTo(true);
     }
 
     @Test
@@ -195,11 +191,11 @@ public class TestJsonCassandraHandles
 
         CassandraColumnHandle columnHandle = OBJECT_MAPPER.readValue(json, CassandraColumnHandle.class);
 
-        assertEquals(columnHandle.getName(), "column2");
-        assertEquals(columnHandle.getOrdinalPosition(), 0);
-        assertEquals(columnHandle.getCassandraType(), CassandraTypes.SET);
-        assertEquals(columnHandle.isPartitionKey(), false);
-        assertEquals(columnHandle.isClusteringKey(), false);
+        assertThat(columnHandle.name()).isEqualTo("column2");
+        assertThat(columnHandle.ordinalPosition()).isEqualTo(0);
+        assertThat(columnHandle.cassandraType()).isEqualTo(CassandraTypes.SET);
+        assertThat(columnHandle.partitionKey()).isEqualTo(false);
+        assertThat(columnHandle.clusteringKey()).isEqualTo(false);
     }
 
     private void testJsonEquals(String json, Map<String, Object> expectedMap)
